# zebra-label-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Start-ZebraLabelTool.bat  Start-ZebraLabelTool.ps1  ZebraLabelTool.spec  main.py  pyproject.toml  requirements.txt  settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: check-prereqs.mjs
desktop/src/: bridge.ts  domain.ts  i18n.ts  main.ts  styles.css  vite-env.d.ts  zpl.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  ROADMAP.md  TAURI_DESKTOP.md  TROUBLESHOOTING.md
src/zebra_label_tool/: __init__.py  __main__.py  app.py  barcodes.py  batch.py  cli.py  constants.py  doctor.py  i18n.py  label_spec.py  layout.py  number_sequences.py  presets.py  preview.py  preview_symbols.py  printing.py  settings.py  text_tools.py  zpl.py  zpl_import.py  zpl_renderer.py
tests/: test_barcodes.py  test_batch.py  test_cli.py  test_doctor.py  test_gui_shortcuts_source.py  test_i18n.py  test_label_spec.py  test_layout.py  test_number_sequences.py  test_presets.py  test_preview_symbols.py  test_settings.py  test_tauri_desktop_files.py  test_text_tools.py  test_zpl.py  test_zpl_import.py  test_zpl_renderer.py
