[package]
name = "zebra-label-tool-desktop"
version = "0.1.0"
description = "Modern Tauri desktop client for Zebra Label Tool"
authors = ["DevOpsOfChaos"]
edition = "2021"

homepage = "https://github.com/DevOpsOfChaos/zebra-label-tool"
repository = "https://github.com/DevOpsOfChaos/zebra-label-tool"
license = "MIT"

[package.metadata]
product-name = "Zebra Label Tool"

[lib]
name = "zebra_label_tool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
